--- a/src/styles/live.css
+++ b/src/styles/live.css
@@ -3144,7 +3144,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     z-index: 0;
     opacity: 0.7;
   }
